--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,7 @@
             </plugin>
         </plugins>
     </build>
+    <scm>
+        <developerConnection>scm:gi:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
+    </scm>
 </project>
