--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+<!--                <version>3.0.0</version>-->
+            </plugin>
         </plugins>
     </build>
     <scm>
