--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,10 +12,10 @@
 
     <artifactId>web</artifactId>
 
-    <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
-    </properties>
+<!--    <properties>-->
+<!--        <maven.compiler.source>18</maven.compiler.source>-->
+<!--        <maven.compiler.target>18</maven.compiler.target>-->
+<!--    </properties>-->
 
     <dependencies>
         <dependency>
