--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <start-class>your.package.main</start-class>
+<!--        <start-class>your.package.main</start-class>-->
     </properties>
 
     <build>
@@ -34,11 +34,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-<!--                <version>3.0.0</version>-->
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-release-plugin</artifactId>-->
+<!--&lt;!&ndash;                <version>3.0.0</version>&ndash;&gt;-->
+<!--            </plugin>-->
         </plugins>
     </build>
     <scm>
