--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.autotradingwiz</groupId>
     <artifactId>animalClinicManagement</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>animalClinicManagement</name>
     <description>animalClinicManagement</description>
 
@@ -42,6 +42,6 @@
     </build>
     <scm>
         <developerConnection>scm:git:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
-      <tag>animalClinicManagement-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
