--- a/data/pom.xml
+++ b/data/pom.xml
@@ -12,10 +12,10 @@
 
     <artifactId>data</artifactId>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>18</maven.compiler.source>-->
-<!--        <maven.compiler.target>18</maven.compiler.target>-->
-<!--    </properties>-->
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
