--- a/data/pom.xml
+++ b/data/pom.xml
@@ -8,15 +8,14 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data</artifactId>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>18</maven.compiler.source>-->
-<!--        <maven.compiler.target>18</maven.compiler.target>-->
-<!--    </properties>-->
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
