--- a/pom.xml
+++ b/pom.xml
@@ -25,23 +25,19 @@
 
     <properties>
         <java.version>17</java.version>
-<!--        <start-class>your.package.main</start-class>-->
+        <start-class>your.package.main</start-class>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-<!--                <version>3.0.0</version>-->
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
     <scm>
         <developerConnection>scm:git:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
     </scm>
+
 </project>
