--- a/pom.xml
+++ b/pom.xml
@@ -45,4 +45,7 @@
             </plugin>
         </plugins>
     </build>
+    <scm>
+        <developerConnection>scm:git:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
+    </scm>
 </project>
