--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>animalClinicManagement</artifactId>
         <groupId>com.autotradingwiz</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
         <dependency>
             <artifactId>data</artifactId>
             <groupId>com.autotradingwiz</groupId>
-            <version>0.0.3</version>
+            <version>0.0.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
