--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,8 @@
 
     <artifactId>web</artifactId>
 
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
