--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,6 +15,9 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
+        <webjars-bootstrap.version>5.1.3</webjars-bootstrap.version>
+        <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
     </properties>
 
     <dependencies>
