--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <packaging>pom</packaging>
-
     <groupId>com.autotradingwiz</groupId>
     <artifactId>animalClinicManagement</artifactId>
     <version>0.0.4-SNAPSHOT</version>
     <name>animalClinicManagement</name>
     <description>animalClinicManagement</description>
-
     <modules>
         <module>data</module>
         <module>web</module>
     </modules>
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>        <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.0</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-
     <properties>
         <java.version>17</java.version>
         <start-class>your.package.main</start-class>
     </properties>
-
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+            <plugin>                <groupId>org.springframework.boot</groupId>                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
+            <plugin>                <groupId>org.apache.maven.plugins</groupId>               <artifactId>maven-release-plugin</artifactId>
 <!--                <version>3.0.0</version>-->
                 <configuration>
-                    <goals>install</goals>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <goals>install</goals>                   <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <scm>
-        <developerConnection>scm:git:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
+    <scm>       <developerConnection>scm:git:https://git@github.com/nkh1987/animalClinicManagement</developerConnection>
       <tag>HEAD</tag>
   </scm>
 </project>
